Fixes issue with buttons jumping when clicked

--- a/style.css
+++ b/style.css
@@ -4,8 +4,11 @@ body {
 
 #tictactoe {
     width: 800px;
-    margin: 0 auto;;
-    text-align: center;
+    margin: 0 auto;
+}
+
+table {
+    margin: 0 auto;
 }
 
 button {
@@ -14,5 +17,5 @@ button {
   margin: 5px;
   border-radius: 5px;
   background-color: lightgray;
-  font-size: x-large;
+  font-size: 2em;
 }
